--- a/Sheaft.Web.Manage/appsettings.json
+++ b/Sheaft.Web.Manage/appsettings.json
@@ -11,50 +11,14 @@
         "System": "Warning",
         "Hangfire": "Warning"
       }
-    },
-    "WriteTo": [
-      {
-        "Name": "Async",
-        "Args": {
-          "configure": [
-            {
-              "Name": "NewRelicLogs",
-              "Args": {
-                "endpointUrl": "https://log-api.eu.newrelic.com/log/v1",
-                "applicationName": "MANAGE",
-                "licenseKey": "",
-                "insertKey": "",
-                "restrictedToMinimumLevel": "Information",
-                "batchSizeLimit": "250"
-              }
-            }
-          ]
-        }
-      },
-      {
-        "Name": "Logger",
-        "Args": {
-          "configureLogger": {
-            "MinimumLevel": "Verbose",
-            "WriteTo": [
-              {
-                "Name": "Console",
-                "Args": {
-                  "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}",
-                  "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
-                }
-              }
-            ]
-          },
-          "restrictedToMinimumLevel": "Verbose",
-          "levelSwitch": "$controlSwitch"
-        }
-      }
-    ],
-    "Enrich": [
-      "WithNewRelicLogsInContext"
-    ]
+    }
   },
+  "NEW_RELIC_LOG_API": "https://log-api.eu.newrelic.com/log/v1",
+  "NEW_RELIC_LICENCE_KEY": "##REPLACE##",
+  "NEW_RELIC_INSERT_KEY": "##REPLACE##",
+  "NEW_RELIC_APP_NAME": "MANAGE",
+  "NEW_RELIC_BATCH_SIZE": "100",
+  "NEW_RELIC_LOG_LEVEL": "Warning",
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
@@ -272,11 +236,5 @@
       "id": "##REPLACE##",
       "value": "##REPLACE##"
     }
-  },
-  "NEW_RELIC_LOG_API": "https://log-api.eu.newrelic.com/log/v1",
-  "NEW_RELIC_LICENCE_KEY": "##REPLACE##",
-  "NEW_RELIC_INSERT_KEY": "##REPLACE##",
-  "NEW_RELIC_APP_NAME": "MANAGE",
-  "NEW_RELIC_BATCH_SIZE": "100",
-  "NEW_RELIC_LOG_LEVEL": "Warning"
+  }
 }
