Fix - Simplification des appsettings serilog

--- a/Sheaft.Web.Api/appsettings.json
+++ b/Sheaft.Web.Api/appsettings.json
@@ -3,13 +3,9 @@
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.NewRelic.Logs" ],
     "LevelSwitches": { "$controlSwitch": "Verbose" },
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Verbose",
       "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting": "Information",
-        "Serilog.AspNetCore": "Warning",
-        "System": "Warning",
-        "Hangfire": "Warning"
+        "Microsoft": "Verbose"
       }
     }
   },
