--- a/Sheaft.Web.Manage/appsettings.json
+++ b/Sheaft.Web.Manage/appsettings.json
@@ -3,13 +3,11 @@
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.NewRelic.Logs" ],
     "LevelSwitches": { "$controlSwitch": "Verbose" },
     "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.Hosting": "Information",
-        "Serilog.AspNetCore": "Warning",
-        "System": "Warning",
-        "Hangfire": "Warning"
+      "MinimumLevel": {
+        "Default": "Verbose",
+        "Override": {
+          "Microsoft": "Verbose"
+        }
       }
     }
   },
@@ -17,7 +15,7 @@
   "NEW_RELIC_LICENCE_KEY": "##REPLACE##",
   "NEW_RELIC_INSERT_KEY": "##REPLACE##",
   "NEW_RELIC_APP_NAME": "MANAGE",
-  "NEW_RELIC_BATCH_SIZE": "100",
+  "NEW_RELIC_BATCH_SIZE": "250",
   "NEW_RELIC_LOG_LEVEL": "Warning",
   "Logging": {
     "LogLevel": {
