Fix - Log min level set to warning

--- a/Sheaft.Web.Api/appsettings.json
+++ b/Sheaft.Web.Api/appsettings.json
@@ -1,11 +1,9 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.NewRelic.Logs" ],
-    "LevelSwitches": { "$controlSwitch": "Verbose" },
     "MinimumLevel": {
-      "Default": "Verbose",
+      "Default": "Warning",
       "Override": {
-        "Microsoft": "Verbose"
+        "Microsoft": "Warning"
       }
     }
   },
