--- a/Sheaft.Web.Payment/appsettings.json
+++ b/Sheaft.Web.Payment/appsettings.json
@@ -1,13 +1,9 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.NewRelic.Logs" ],
-    "LevelSwitches": { "$controlSwitch": "Verbose" },
     "MinimumLevel": {
-      "MinimumLevel": {
-        "Default": "Verbose",
-        "Override": {
-          "Microsoft": "Verbose"
-        }
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Warning"
       }
     }
   },
