New - Ajout du handling de robot.txt

--- a/Sheaft.Web.Api/Sheaft.Web.Api.csproj
+++ b/Sheaft.Web.Api/Sheaft.Web.Api.csproj
@@ -47,6 +47,7 @@
     <ProjectReference Include="..\Sheaft.GraphQL.Types\Sheaft.GraphQL.Types.csproj" />
     <ProjectReference Include="..\Sheaft.Infrastructure.Persistence\Sheaft.Infrastructure.Persistence.csproj" />
     <ProjectReference Include="..\Sheaft.Application.Mappers\Sheaft.Application.Mappers.csproj" />
+    <ProjectReference Include="..\Sheaft.Web.Common\Sheaft.Web.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="appsettings.Development.json">
