--- a/Sheaft.Web.Manage/Sheaft.Web.Manage.csproj
+++ b/Sheaft.Web.Manage/Sheaft.Web.Manage.csproj
@@ -33,6 +33,7 @@
     <ProjectReference Include="..\Sheaft.Application.Mappers\Sheaft.Application.Mappers.csproj" />
     <ProjectReference Include="..\Sheaft.Application.Models\Sheaft.Application.Models.csproj" />
     <ProjectReference Include="..\Sheaft.Options\Sheaft.Options.csproj" />
+    <ProjectReference Include="..\Sheaft.Web.Common\Sheaft.Web.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
