Update - Mise à jour des settings

--- a/Sheaft.Web.Signalr/appsettings.json
+++ b/Sheaft.Web.Signalr/appsettings.json
@@ -3,7 +3,9 @@
     "MinimumLevel": {
       "Default": "Warning",
       "Override": {
-        "Microsoft": "Warning"
+        "Microsoft": "Warning",
+        "Microsoft.Hosting": "Information",
+        "Sheaft": "Information"
       }
     }
   },
@@ -12,7 +14,7 @@
   "NEW_RELIC_INSERT_KEY": "##REPLACE##",
   "NEW_RELIC_APP_NAME": "SIGNALR",
   "NEW_RELIC_BATCH_SIZE": "250",
-  "NEW_RELIC_LOG_LEVEL": "Warning",
+  "NEW_RELIC_LOG_LEVEL": "Information",
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
