--- a/Sheaft.Web.Jobs/appsettings.json
+++ b/Sheaft.Web.Jobs/appsettings.json
@@ -117,12 +117,20 @@
     "apiKey": "##REPLACE##",
     "url": "https://##REPLACE##.freshdesk.com/api/v2/"
   },
-  "Database": {
+  "AppDatabase": {
     "Name": "app",
     "Server": "localhost",
     "User": "##REPLACE##",
     "Password": "##REPLACE##",
-    "Port": 1434,
+    "Port": 1433,
+    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
+  },
+  "JobsDatabase": {
+    "Name": "app",
+    "Server": "localhost",
+    "User": "##REPLACE##",
+    "Password": "##REPLACE##",
+    "Port": 1433,
     "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
   },
   "Cache": {
