Update - Maj du fichier readme

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Sheaft.Web.Functions/appsettings.Development.json
 Sheaft.Web.Manage/appsettings.Development.json
 Sheaft.Web.Payment/appsettings.Development.json
 Sheaft.Web.Jobs/appsettings.Development.json
+.history
