Update - Uniformisation des settings

--- a/Sheaft.Web.Jobs/appsettings.json
+++ b/Sheaft.Web.Jobs/appsettings.json
@@ -21,9 +21,6 @@
       "Microsoft": "Warning"
     }
   },
-  "AppInsights": {
-    "InstrumentationKey": "##REPLACE##"
-  },
   "mailer": {
     "apiKey": "##REPLACE##",
     "sender": {
@@ -36,34 +33,18 @@
     "ApiUrl": "https://api.mangopay.com",
     "ClientId": "##REPLACE##",
     "ApiKey": "##REPLACE##",
-    "ReturnUrl": "https://payment.sheaft.com/payments/transaction",
-    "PaymentUrl": "https://payment.sheaft.com/",
+    "ReturnUrl": "https://##REPLACE##/payments/transaction",
+    "PaymentUrl": "https://##REPLACE##/",
     "PaylineUrl": "https://payment.cdn.payline.com",
-    "AppRedirectUrl": "https://app.sheaft.com/#/cart/checkout?transactionId={transactionId}",
+    "AppRedirectUrl": "https://##REPLACE##/#/cart/checkout?transactionId={transactionId}",
     "FixedAmount": 0.18,
     "Percent": 0.018,
     "UserId": "##REPLACE##",
     "WalletId": "##REPLACE##"
   },
   "Routines": {
-    "CheckOrdersFromMinutes": 1440,
     "CheckOrderExpiredFromMinutes": 1440,
-    "CheckPayinsFromMinutes": 1,
-    "CheckPayinExpiredFromMinutes": 60,
-    "CheckNewPayinRefundsFromMinutes": 10080,
-    "CheckPayinRefundsFromMinutes": 60,
-    "CheckPayinRefundExpiredFromMinutes": 2880,
-    "CheckNewPayoutsFromMinutes": 10080,
-    "CheckPayoutsFromMinutes": 1,
-    "CheckPayoutExpiredFromMinutes": 2880,
-    "CheckNewTransfersFromMinutes": 1440,
-    "CheckTransfersFromMinutes": 1,
-    "CheckTransferExpiredFromMinutes": 1440,
-    "CheckNewTransferRefundsFromMinutes": 1440,
-    "CheckTransferRefundsFromMinutes": 60,
-    "CheckTransferRefundExpiredFromMinutes": 2880,
-    "CheckDonationsFromMinutes": 1,
-    "CheckDonationExpiredFromMinutes": 1440
+    "CheckNewPayinRefundsFromMinutes": 10080
   },
   "Sponsoring": {
     "CodeLength": 6,
@@ -171,14 +152,7 @@
     "Key": "##REPLACE##",
     "Url": "DefaultEndpointsProtocol=https;AccountName={0};AccountKey={1};EndpointSuffix={2}"
   },
-  "ServiceBus": {
-    "KeyName": "",
-    "Account": "##REPLACE##",
-    "KeyValue": "##REPLACE##",
-    "Url": "##REPLACE##"
-  },
   "Landing": {
-    "newsletterUrl": "/nlregistered",
     "url": "http://localhost:3000"
   },
   "Portal": {
@@ -186,10 +160,8 @@
   },
   "Scoring": {
     "ranks": {
-      "rookie": 250,
-      "soldier": 500,
-      "sergent": 1000,
-      "lieutnant": 2000
+      "rookie": 250
+
     },
     "points": {
       "None": 0,
@@ -215,11 +187,6 @@
         "Limit": 60
       },
       {
-        "Endpoint": "post:/contact/*",
-        "Period": "1m",
-        "Limit": 2
-      },
-      {
         "Endpoint": "post:/upload/*",
         "Period": "1m",
         "Limit": 1
@@ -234,35 +201,35 @@
   "Roles": {
     "Admin": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "ADMIN"
     },
     "Owner": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "OWNER"
     },
     "User": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "USER"
     },
     "Store": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "STORE"
     },
     "Producer": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "PRODUCER"
     },
     "Consumer": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "CONSUMER"
     },
     "Support": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "SUPPORT"
     },
     "Anonymous": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "APPUSER"
     }
   }
 }
