--- a/Sheaft.Web.Manage/appsettings.json
+++ b/Sheaft.Web.Manage/appsettings.json
@@ -21,19 +21,6 @@
       "Microsoft": "Warning"
     }
   },
-  "ApplicationInsights": {
-    "InstrumentationKey": "##REPLACE##"
-  },
-  "Psp": {
-    "ApiUrl": "https://api.mangopay.com",
-    "ClientId": "##REPLACE##",
-    "ApiKey": "##REPLACE##",
-    "ReturnUrl": "##REPLACE##",
-    "PaymentUrl": "##REPLACE##",
-    "PaylineUrl": "https://payment.cdn.payline.com",
-    "FixedAmount": 0.18,
-    "Percent": 0.018
-  },
   "mailer": {
     "apiKey": "##REPLACE##",
     "sender": {
@@ -41,6 +28,23 @@
       "name": "##REPLACE##"
     },
     "bounces": "##REPLACE##"
+  },
+  "Psp": {
+    "ApiUrl": "https://api.mangopay.com",
+    "ClientId": "##REPLACE##",
+    "ApiKey": "##REPLACE##",
+    "ReturnUrl": "https://##REPLACE##/payments/transaction",
+    "PaymentUrl": "https://##REPLACE##/",
+    "PaylineUrl": "https://payment.cdn.payline.com",
+    "AppRedirectUrl": "https://##REPLACE##/#/cart/checkout?transactionId={transactionId}",
+    "FixedAmount": 0.18,
+    "Percent": 0.018,
+    "UserId": "##REPLACE##",
+    "WalletId": "##REPLACE##"
+  },
+  "Routines": {
+    "CheckOrderExpiredFromMinutes": 1440,
+    "CheckNewPayinRefundsFromMinutes": 10080
   },
   "Sponsoring": {
     "CodeLength": 6,
@@ -59,7 +63,7 @@
     "scheme": "Bearer",
     "url": "https://api.insee.fr/",
     "apiKey": "##REPLACE##",
-    "searchSiretUrl": "/entreprises/sirene/V3/siret/{0}?champs=siren%2Cnic%2Csiret%2CprenomUsuelUniteLegale%2CnomUniteLegale%2CdenominationUsuelle1UniteLegale%2CnumeroVoieEtablissement%2CcomplementAdresseEtablissement%2ClibelleVoieEtablissement%2CcodePostalEtablissement%2ClibelleCommuneEtablissement&masquerValeursNulles=true"
+    "searchSiretUrl": "/entreprises/sirene/V3/siret/{0}?champs=siren%2Cnic%2Csiret%2CprenomUsuelUniteLegale%2CnomUniteLegale%2CdenominationUsuelle1UniteLegale%2CnumeroVoieEtablissement%2CcomplementAdresseEtablissement%2ClibelleVoieEtablissement%2CcodePostalEtablissement%2ClibelleCommuneEtablissement%2CcategorieJuridiqueUniteLegale%2CetatAdministratifUniteLegale%2CtypeVoieEtablissement&masquerValeursNulles=true"
   },
   "Auth": {
     "scheme": "apikey",
@@ -102,6 +106,14 @@
     "Port": 1433,
     "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
   },
+  "JobsDatabase": {
+    "Name": "app",
+    "Server": "localhost",
+    "User": "##REPLACE##",
+    "Password": "##REPLACE##",
+    "Port": 1433,
+    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
+  },
   "Cache": {
     "TableName": "CachedItems",
     "SchemaName": "Cache",
@@ -124,7 +136,8 @@
       "Products": "products",
       "Jobs": "jobs",
       "Rgpd": "rgpd",
-      "PickingOrders": "picking-orders"
+      "PickingOrders": "picking-orders",
+      "Progress": "progress"
     },
     "Tables": {
       "OrdersReferences": "ordersreferences",
@@ -139,14 +152,7 @@
     "Key": "##REPLACE##",
     "Url": "DefaultEndpointsProtocol=https;AccountName={0};AccountKey={1};EndpointSuffix={2}"
   },
-  "ServiceBus": {
-    "KeyName": "",
-    "Account": "##REPLACE##",
-    "KeyValue": "##REPLACE##",
-    "Url": "##REPLACE##"
-  },
   "Landing": {
-    "newsletterUrl": "/nlregistered",
     "url": "http://localhost:3000"
   },
   "Portal": {
@@ -154,10 +160,8 @@
   },
   "Scoring": {
     "ranks": {
-      "rookie": 250,
-      "soldier": 500,
-      "sergent": 1000,
-      "lieutnant": 2000
+      "rookie": 250
+
     },
     "points": {
       "None": 0,
@@ -183,11 +187,6 @@
         "Limit": 60
       },
       {
-        "Endpoint": "post:/contact/*",
-        "Period": "1m",
-        "Limit": 2
-      },
-      {
         "Endpoint": "post:/upload/*",
         "Period": "1m",
         "Limit": 1
@@ -202,35 +201,35 @@
   "Roles": {
     "Admin": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "ADMIN"
     },
     "Owner": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "OWNER"
     },
     "User": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "USER"
     },
     "Store": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "STORE"
     },
     "Producer": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "PRODUCER"
     },
     "Consumer": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "CONSUMER"
     },
     "Support": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "SUPPORT"
     },
     "Anonymous": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "APPUSER"
     }
   }
 }
