--- a/Sheaft.Web.Payment/appsettings.json
+++ b/Sheaft.Web.Payment/appsettings.json
@@ -21,32 +21,30 @@
       "Microsoft": "Warning"
     }
   },
-  "AppInsights": {
-    "InstrumentationKey": "##REPLACE##"
-  },
-  "sendgrid": {
-    "url": "https://api.sendgrid.com/",
+  "mailer": {
     "apiKey": "##REPLACE##",
     "sender": {
       "email": "##REPLACE##@##REPLACE##.##REPLACE##",
       "name": "##REPLACE##"
     },
-    "groups": {
-      "newsletter": "##REPLACE##"
-    }
+    "bounces": "##REPLACE##"
   },
   "Psp": {
     "ApiUrl": "https://api.mangopay.com",
     "ClientId": "##REPLACE##",
     "ApiKey": "##REPLACE##",
-    "ReturnUrl": "https://payment.sheaft.com/payments/transaction",
-    "PaymentUrl": "https://payment.sheaft.com/",
+    "ReturnUrl": "https://##REPLACE##/payments/transaction",
+    "PaymentUrl": "https://##REPLACE##/",
     "PaylineUrl": "https://payment.cdn.payline.com",
-    "AppRedirectPendingUrl": "https://app.sheaft.com/#/cart/pending?transactionId={transactionId}",
-    "AppRedirectFailedUrl": "https://app.sheaft.com/#/cart/checkout?transactionId={transactionId}&message={message}",
-    "AppRedirectSuccessUrl": "https://app.sheaft.com/#/cart/success?transactionId={transactionId}",
+    "AppRedirectUrl": "https://##REPLACE##/#/cart/checkout?transactionId={transactionId}",
     "FixedAmount": 0.18,
-    "Percent": 0.018
+    "Percent": 0.018,
+    "UserId": "##REPLACE##",
+    "WalletId": "##REPLACE##"
+  },
+  "Routines": {
+    "CheckOrderExpiredFromMinutes": 1440,
+    "CheckNewPayinRefundsFromMinutes": 10080
   },
   "Sponsoring": {
     "CodeLength": 6,
@@ -65,7 +63,7 @@
     "scheme": "Bearer",
     "url": "https://api.insee.fr/",
     "apiKey": "##REPLACE##",
-    "searchSiretUrl": "/entreprises/sirene/V3/siret/{0}?champs=siren%2Cnic%2Csiret%2CprenomUsuelUniteLegale%2CnomUniteLegale%2CdenominationUsuelle1UniteLegale%2CnumeroVoieEtablissement%2CcomplementAdresseEtablissement%2ClibelleVoieEtablissement%2CcodePostalEtablissement%2ClibelleCommuneEtablissement&masquerValeursNulles=true"
+    "searchSiretUrl": "/entreprises/sirene/V3/siret/{0}?champs=siren%2Cnic%2Csiret%2CprenomUsuelUniteLegale%2CnomUniteLegale%2CdenominationUsuelle1UniteLegale%2CnumeroVoieEtablissement%2CcomplementAdresseEtablissement%2ClibelleVoieEtablissement%2CcodePostalEtablissement%2ClibelleCommuneEtablissement%2CcategorieJuridiqueUniteLegale%2CetatAdministratifUniteLegale%2CtypeVoieEtablissement&masquerValeursNulles=true"
   },
   "Auth": {
     "scheme": "apikey",
@@ -100,12 +98,20 @@
     "apiKey": "##REPLACE##",
     "url": "https://##REPLACE##.freshdesk.com/api/v2/"
   },
-  "Database": {
+  "AppDatabase": {
     "Name": "app",
     "Server": "localhost",
     "User": "##REPLACE##",
     "Password": "##REPLACE##",
-    "Port": 1434,
+    "Port": 1433,
+    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
+  },
+  "JobsDatabase": {
+    "Name": "app",
+    "Server": "localhost",
+    "User": "##REPLACE##",
+    "Password": "##REPLACE##",
+    "Port": 1433,
     "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
   },
   "Cache": {
@@ -146,14 +152,7 @@
     "Key": "##REPLACE##",
     "Url": "DefaultEndpointsProtocol=https;AccountName={0};AccountKey={1};EndpointSuffix={2}"
   },
-  "ServiceBus": {
-    "KeyName": "",
-    "Account": "##REPLACE##",
-    "KeyValue": "##REPLACE##",
-    "Url": "##REPLACE##"
-  },
   "Landing": {
-    "newsletterUrl": "/nlregistered",
     "url": "http://localhost:3000"
   },
   "Portal": {
@@ -161,10 +160,8 @@
   },
   "Scoring": {
     "ranks": {
-      "rookie": 250,
-      "soldier": 500,
-      "sergent": 1000,
-      "lieutnant": 2000
+      "rookie": 250
+
     },
     "points": {
       "None": 0,
@@ -190,11 +187,6 @@
         "Limit": 60
       },
       {
-        "Endpoint": "post:/contact/*",
-        "Period": "1m",
-        "Limit": 2
-      },
-      {
         "Endpoint": "post:/upload/*",
         "Period": "1m",
         "Limit": 1
@@ -209,35 +201,35 @@
   "Roles": {
     "Admin": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "ADMIN"
     },
     "Owner": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "OWNER"
     },
     "User": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "USER"
     },
     "Store": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "STORE"
     },
     "Producer": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "PRODUCER"
     },
     "Consumer": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "CONSUMER"
     },
     "Support": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "SUPPORT"
     },
     "Anonymous": {
       "id": "##REPLACE##",
-      "value": "##REPLACE##"
+      "value": "APPUSER"
     }
   }
 }
