--- a/Sheaft.Web.Payment/appsettings.json
+++ b/Sheaft.Web.Payment/appsettings.json
@@ -40,7 +40,19 @@
     "FixedAmount": 0.18,
     "Percent": 0.018,
     "UserId": "##REPLACE##",
-    "WalletId": "##REPLACE##"
+    "WalletId": "##REPLACE##",
+    "Bank": {
+      "Id": "##REPLACE##",
+      "Iban": "##REPLACE##",
+      "Bic": "##REPLACE##",
+      "Address": {
+        "Line1": "##REPLACE##",
+        "Line2": "##REPLACE##",
+        "Zipcode": "##REPLACE##",
+        "City": "##REPLACE##",
+        "Country": "##REPLACE##"
+      }
+    }
   },
   "Routines": {
     "CheckOrderExpiredFromMinutes": 1440,
