--- a/Sheaft.Web.Payment/Sheaft.Web.Payment.csproj
+++ b/Sheaft.Web.Payment/Sheaft.Web.Payment.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.dockerignore" Link=".dockerignore">
+      <DependentUpon>$(DockerDefaultDockerfile)</DependentUpon>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.17" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.7.17" />
     <PackageReference Include="mangopay2-sdk" Version="2.1.6" />
