--- a/Sheaft.Web.Api/Sheaft.Web.Api.csproj
+++ b/Sheaft.Web.Api/Sheaft.Web.Api.csproj
@@ -8,6 +8,11 @@
     <OutputPath />
   </PropertyGroup>
   <ItemGroup>
+    <None Include="..\.dockerignore" Link=".dockerignore">
+      <DependentUpon>$(DockerDefaultDockerfile)</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="AspNetCoreRateLimit" Version="3.2.1" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.17" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.7.17" />
