New - Ajout d'un fichier compose pour créer une infra docker locale

--- a/Sheaft.Web.Api/Sheaft.Web.Api.csproj
+++ b/Sheaft.Web.Api/Sheaft.Web.Api.csproj
@@ -2,16 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>3b20e46e-a22a-4d4c-baab-379c31f04a48</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile />
-    <OutputPath />
-  </PropertyGroup>
-  <ItemGroup>
-    <None Include="..\.dockerignore" Link=".dockerignore">
-      <DependentUpon>$(DockerDefaultDockerfile)</DependentUpon>
-    </None>
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AspNetCoreRateLimit" Version="3.2.1" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.17" />
