--- a/Sheaft.Web.Jobs/Properties/launchSettings.json
+++ b/Sheaft.Web.Jobs/Properties/launchSettings.json
@@ -9,15 +9,7 @@
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Sheaft.Web.Jobs": {
+    "jobs": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "",
