--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "1434:1433"
     networks:
       sheaft_net:
+        ipv4_address: 172.28.1.10
         aliases:
           - db-svc
     environment:
@@ -23,12 +24,11 @@ services:
       - "5001:443"
     networks:
       sheaft_net:
+        ipv4_address: 172.28.1.2
         aliases:
           - identity-svc
     depends_on:
       - sql
-    links:
-      - "sql"
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "IDENTITY-DEV"
   graphql:
@@ -41,13 +41,12 @@ services:
       - "5003:443"
     networks:
       sheaft_net:
+        ipv4_address: 172.28.1.3
         aliases:
           - graphql-svc
     depends_on:
       - sql
       - identity
-    links:
-      - "sql"
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "GRAPHQL-DEV"
   jobs:
@@ -60,13 +59,12 @@ services:
       - "5020:443"
     networks:
       sheaft_net:
+        ipv4_address: 172.28.1.4
         aliases:
           - jobs-svc
     depends_on:
       - graphql
       - identity
-    links:
-      - "sql"
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "JOBS-DEV"
   manage:
@@ -79,13 +77,12 @@ services:
       - "5008:443"
     networks:
       sheaft_net:
+        ipv4_address: 172.28.1.5
         aliases:
           - manage-svc
     depends_on:
       - graphql
       - identity
-    links:
-      - "sql"
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "MANAGE-DEV"
   signalr:
@@ -98,6 +95,7 @@ services:
       - "5010:443"
     networks:
       sheaft_net:
+        ipv4_address: 172.28.1.6
         aliases:
           - signalr-svc
     depends_on:
@@ -115,6 +113,7 @@ services:
       - "5015:443"
     networks:
       sheaft_net:
+        ipv4_address: 172.28.1.7
         aliases:
           - payment-svc
     depends_on:
@@ -125,4 +124,6 @@ services:
 
 networks:
   sheaft_net:
-    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.28.1.0/24
