Update - Exposition des ports internes pour les DockerFile

--- a/Sheaft.Web.Api/Dockerfile
+++ b/Sheaft.Web.Api/Dockerfile
@@ -2,8 +2,10 @@
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+ENV ASPNETCORE_URLS=https://*:5003;http://*:5002
+ENV ASPNETCORE_HTTPS_PORT=5003
+EXPOSE 5002
+EXPOSE 5003
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
