--- a/Sheaft.Web.Manage/Dockerfile
+++ b/Sheaft.Web.Manage/Dockerfile
@@ -2,8 +2,10 @@
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+ENV ASPNETCORE_URLS=https://*:5008;http://*:5007
+ENV ASPNETCORE_HTTPS_PORT=5021
+EXPOSE 5008
+EXPOSE 5007
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
