--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -2,128 +2,148 @@ version: "3.8"
 services:
   sql:
     container_name: sql-db
+    restart: always
     image: mcr.microsoft.com/mssql/server:2019-latest
     env_file:
       - ./docker.env
     ports:
       - "1434:1433"
-    networks:
-      sheaft_net:
-        ipv4_address: 172.28.1.10
-        aliases:
-          - db-svc
     environment:
       ACCEPT_EULA: "Y"
   identity:
+    build:
+      context: ./../../identity/
+      dockerfile: Sheaft.Identity/Dockerfile
     image: sheaft/sheaft.identity:latest
     container_name: identity
+    restart: always
     env_file:
-      - ./docker.env
+      - ./../../identity/Sheaft.Identity/docker.env
+    network_mode: host
     ports:
-      - "5000:80"
-      - "5001:443"
-    networks:
-      sheaft_net:
-        ipv4_address: 172.28.1.2
-        aliases:
-          - identity-svc
+      - "5000:5000"
+      - "5001:5001"
     depends_on:
       - sql
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "IDENTITY-DEV"
+        ASPNETCORE_URLS: "http://+:5000;https://+:5001"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@ssw0rd"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+    volumes:
+      - ${USERPROFILE}\.aspnet\https:/https/
   graphql:
+    build:
+      context: ./../
+      dockerfile: Sheaft.Web.Api/Dockerfile
     image: sheaft/sheaft.graphql:latest
     container_name: graphql
+    restart: always
     env_file:
       - ./docker.env
+    network_mode: host
     ports:
-      - "5002:80"
-      - "5003:443"
-    networks:
-      sheaft_net:
-        ipv4_address: 172.28.1.3
-        aliases:
-          - graphql-svc
+      - "5002:5002"
+      - "5003:5003"
     depends_on:
       - sql
       - identity
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "GRAPHQL-DEV"
+        ASPNETCORE_URLS: "http://+:5002;https://+:5003"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@ssw0rd"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+    volumes:
+      - ${USERPROFILE}\.aspnet\https:/https/
   jobs:
+    build:
+      context: ./../
+      dockerfile: Sheaft.Web.Jobs/Dockerfile
     image: sheaft/sheaft.jobs:latest
     container_name: jobs
+    restart: always
     env_file:
       - ./docker.env
+    network_mode: host
     ports:
-      - "5021:80"
-      - "5020:443"
-    networks:
-      sheaft_net:
-        ipv4_address: 172.28.1.4
-        aliases:
-          - jobs-svc
+      - "5019:5019"
+      - "5020:5020"
     depends_on:
       - graphql
       - identity
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "JOBS-DEV"
+        ASPNETCORE_URLS: "http://+:5019;https://+:5020"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@ssw0rd"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+    volumes:
+      - ${USERPROFILE}\.aspnet\https:/https/
   manage:
+    build:
+      context: ./../
+      dockerfile: Sheaft.Web.Manage/Dockerfile
     image: sheaft/sheaft.manage:latest
     container_name: manage
+    restart: always
     env_file:
       - ./docker.env
+    network_mode: host
     ports:
-      - "5007:80"
-      - "5008:443"
-    networks:
-      sheaft_net:
-        ipv4_address: 172.28.1.5
-        aliases:
-          - manage-svc
+      - "5007:5007"
+      - "5008:5008"
     depends_on:
       - graphql
       - identity
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "MANAGE-DEV"
+        ASPNETCORE_URLS: "http://+:5007;https://+:5008"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@ssw0rd"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+    volumes:
+      - ${USERPROFILE}\.aspnet\https:/https/
   signalr:
+    build:
+      context: ./../
+      dockerfile: Sheaft.Web.Signalr/Dockerfile
     image: sheaft/sheaft.signalr:latest
     container_name: signalr
+    restart: always
     env_file:
       - ./docker.env
+    network_mode: host
     ports:
-      - "5009:80"
-      - "5010:443"
-    networks:
-      sheaft_net:
-        ipv4_address: 172.28.1.6
-        aliases:
-          - signalr-svc
+      - "5009:5009"
+      - "5010:5010"
     depends_on:
       - graphql
       - identity
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "SIGNALR-DEV"
+        ASPNETCORE_URLS: "http://+:5009;https://+:5010"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@ssw0rd"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+    volumes:
+      - ${USERPROFILE}\.aspnet\https:/https/
   payment:
+    build:
+      context: ./../
+      dockerfile: Sheaft.Web.Payment/Dockerfile
     image: sheaft/sheaft.payment:latest
     container_name: payment
+    restart: always
     env_file:
       - ./docker.env
+    network_mode: host
     ports:
-      - "5014:80"
-      - "5015:443"
-    networks:
-      sheaft_net:
-        ipv4_address: 172.28.1.7
-        aliases:
-          - payment-svc
+      - "5014:5014"
+      - "5015:5015"
     depends_on:
       - graphql
       - jobs
     environment:
         ASPNETCORE_NEW_RELIC_APP_NAME: "PAYMENT-DEV"
-
-networks:
-  sheaft_net:
-    ipam:
-      config:
-        - subnet: 172.28.1.0/24
+        ASPNETCORE_URLS: "http://+:5014;https://+:5015"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@ssw0rd"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+    volumes:
+      - ${USERPROFILE}\.aspnet\https:/https/
