--- a/Docker/docker.env
+++ b/Docker/docker.env
@@ -1,160 +1,164 @@
+USERPROFILE={{USER_PROFILE_PATH}}
 SA_PASSWORD={{SQL_PASSWORD}}
-ASPNETCORE_Serilog__MinimumLevel__Default={{SERILOG_MINIMUM_LEVEL_DEFAULT}}
-ASPNETCORE_Serilog__MinimumLevel__Override__Microsoft=Warning
-ASPNETCORE_Serilog__MinimumLevel__Override__Sheaft=Information
-ASPNETCORE_NEW_RELIC_LOG_API={{NEW_RELIC_API}}
-ASPNETCORE_NEW_RELIC_LICENCE_KEY={{NEW_RELIC_LICENCE_KEY}}
-ASPNETCORE_NEW_RELIC_INSERT_KEY={{NEW_RELIC_INSERT_KEY}}
-ASPNETCORE_NEW_RELIC_BATCH_SIZE=250
-ASPNETCORE_NEW_RELIC_LOG_LEVEL={{NEW_RELIC_MINIMUM_LEVEL}}
-ASPNETCORE_mailer__apiId={{MAILER_ID}
-ASPNETCORE_mailer__apiKey={{MAILER_KEY}}
-ASPNETCORE_mailer__sender__email={{MAILER_EMAIL}}
-ASPNETCORE_mailer__sender__name={{MAILER_NAME}}
-ASPNETCORE_mailer__bounces={{MAILER_BOUNCES}}
-ASPNETCORE_Psp__ApiUrl={{PSP_API}}
-ASPNETCORE_Psp__ClientId={{PSP_ID}}
-ASPNETCORE_Psp__ApiKey={{PSP_KEY}}
-ASPNETCORE_Psp__ReturnUrl={{PSP_RETURN_URL}}/payments/transaction
-ASPNETCORE_Psp__PaymentUrl={{PSP_RETURN_URL}}
-ASPNETCORE_Psp__PaylineUrl={{PSP_PAYLINE_URL}}
-ASPNETCORE_Psp__AppRedirectUrl={{APP_URL}}/#/cart/checkout?transactionId={transactionId}
-ASPNETCORE_Psp__FixedAmount=0.18
-ASPNETCORE_Psp__Percent=0.018
-ASPNETCORE_Psp__UserId={{PSP_USER_ID}}
-ASPNETCORE_Psp__WalletId={{PSP_WALLET_ID}}
-ASPNETCORE_Psp__SkipIdempotencyKey={{PSP_SKIP_IDEMPOTENCY}}
-ASPNETCORE_Psp__Bank__Id={{PSP_BANK_ID}}
-ASPNETCORE_Psp__Bank__Iban={{PSP_BANK_IBAN}}
-ASPNETCORE_Psp__Bank__Bic={{PSP_BANK_BIC}}
-ASPNETCORE_Psp__Bank__Address__Line1={{PSP_BANK_LINE1}}
-ASPNETCORE_Psp__Bank__Address__Line2={{PSP_BANK_LINE2}}
-ASPNETCORE_Psp__Bank__Address__Zipcode={{PSP_BANK_ZIPCODE}}
-ASPNETCORE_Psp__Bank__Address__City={{PSP_BANK_CITY}}
-ASPNETCORE_Psp__Bank__Address__Country={{PSP_BANK_COUNTRY_ISO_CODE}}
-ASPNETCORE_Search__name={{SEARCH_NAME}}
-ASPNETCORE_Search__apiKey={{SEARCH_KEY}}
-ASPNETCORE_Search__indexes__products=products
-ASPNETCORE_Search__indexes__producers=producers
-ASPNETCORE_Search__indexes__stores=stores
-ASPNETCORE_Sirene__scheme=Bearer
-ASPNETCORE_Sirene__url=https://api.insee.fr/
-ASPNETCORE_Sirene__apiKey={{SIRENE_KEY}}
-ASPNETCORE_Sirene__searchSiretUrl=/entreprises/sirene/V3/siret/{0}?champs=siren%2Cnic%2Csiret%2CprenomUsuelUniteLegale%2CnomUniteLegale%2CdenominationUsuelle1UniteLegale%2CnumeroVoieEtablissement%2CcomplementAdresseEtablissement%2ClibelleVoieEtablissement%2CcodePostalEtablissement%2ClibelleCommuneEtablissement%2CcategorieJuridiqueUniteLegale%2CetatAdministratifUniteLegale%2CtypeVoieEtablissement&masquerValeursNulles=true
-ASPNETCORE_Auth__scheme=apikey
-ASPNETCORE_Auth__url={{AUTH_URL}}
-ASPNETCORE_Auth__apiKey={{AUTH_KEY}}
-ASPNETCORE_Auth__actions__profile=/account/profile
-ASPNETCORE_Auth__actions__picture=/account/picture
-ASPNETCORE_Auth__actions__delete=/account/userAccount?userId={0}
-ASPNETCORE_Auth__caching=true
-ASPNETCORE_Auth__cacheDurationInSeconds=300
-ASPNETCORE_Auth__app__id={{AUTH_APP_ID}}
-ASPNETCORE_Auth__app__audience=App
-ASPNETCORE_Auth__app__secret={{AUTH_APP_KEY}}
-ASPNETCORE_Auth__manage__id={{AUTH_MANAGE_ID}}
-ASPNETCORE_Auth__manage__audience=Manage
-ASPNETCORE_Auth__manage__secret={{AUTH_MANAGE_KEY}}
-ASPNETCORE_Auth__jobs__id={{AUTH_JOB_ID}}
-ASPNETCORE_Auth__jobs__audience=Jobs
-ASPNETCORE_Auth__jobs__secret={{AUTH_JOB_KEY}}
-ASPNETCORE_SignalR__scheme=apikey
-ASPNETCORE_SignalR__apiKey={{SIGNALR_KEY}}
-ASPNETCORE_SignalR__url={{SIGNALR_URL}}
-ASPNETCORE_SignalR__notifyGroupUrl=/api/notify/notify-group/{0}/{1}
-ASPNETCORE_SignalR__notifyUserUrl=/api/notify/notify-user/{0}/{1}
-ASPNETCORE_Freshdesk__apiKey={{FRESHDESK_KEY}}
-ASPNETCORE_Freshdesk__url={{FRESHDESK_URL}}
-ASPNETCORE_AppDatabase__Name={{DB_APP_NAME}}
-ASPNETCORE_AppDatabase__Server={{DB_APP_SERVER}}
-ASPNETCORE_AppDatabase__User={{DB_APP_USER}}
-ASPNETCORE_AppDatabase__Password={{DB_APP_PASSWORD}}
-ASPNETCORE_AppDatabase__Port={{DB_APP_PORT}}
-ASPNETCORE_AppDatabase__Url=Data Source={0}{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};
-ASPNETCORE_JobsDatabase__Name={{DB_JOBS_NAME}}
-ASPNETCORE_JobsDatabase__Server={{DB_JOBS_SERVER}}
-ASPNETCORE_JobsDatabase__User={{DB_JOBS_USER}}
-ASPNETCORE_JobsDatabase__Password={{DB_JOBS_PASSWORD}}
-ASPNETCORE_JobsDatabase__Port={{DB_JOBS_PORT}}
-ASPNETCORE_JobsDatabase__Url=Data Source={0}{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};
-ASPNETCORE_IdentityDatabase__Name={{DB_IDENTITY_NAME}}
-ASPNETCORE_IdentityDatabase__Server={{DB_IDENTITY_SERVER}}
-ASPNETCORE_IdentityDatabase__User={{DB_IDENTITY_USER}}
-ASPNETCORE_IdentityDatabase__Password={{DB_IDENTITY_PASSWORD}}
-ASPNETCORE_IdentityDatabase__Port={{DB_IDENTITY_PORT}}
-ASPNETCORE_IdentityDatabase__Url=Data Source={0}{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};
-ASPNETCORE_Cache__TableName=CachedItems
-ASPNETCORE_Cache__SchemaName=Cache
-ASPNETCORE_Cache__CacheExpirationInMinutes=30
-ASPNETCORE_Cors__origins__0={{APP_URL}}
-ASPNETCORE_Cors__origins__1={{SIGNALR_URL}}
-ASPNETCORE_Cors__methods__0=POST
-ASPNETCORE_Cors__methods__1=GET
-ASPNETCORE_Cors__methods__2=PUT
-ASPNETCORE_Cors__methods__3=DELETE
-ASPNETCORE_Cors__methods__4=PATCH
-ASPNETCORE_Cors__headers__0=*
-ASPNETCORE_Storage__Containers__Pictures=pictures
-ASPNETCORE_Storage__Containers__Products=products
-ASPNETCORE_Storage__Containers__Jobs=jobs
-ASPNETCORE_Storage__Containers__Rgpd=rgpd
-ASPNETCORE_Storage__Containers__PickingOrders=picking-orders
-ASPNETCORE_Storage__Containers__Progress=progress
-ASPNETCORE_Storage__Tables__PurchaseOrdersReferences=purchaseordersreferences
-ASPNETCORE_Storage__Tables__OrdersReferences=ordersreferences
-ASPNETCORE_Storage__Tables__ProductsReferences=productsreferences
-ASPNETCORE_Storage__Tables__SponsoringCodes=sponsoringcodes
-ASPNETCORE_Storage__Suffix=core.windows.net
-ASPNETCORE_Storage__Account={{STORAGE_ACCOUNT}}
-ASPNETCORE_Storage__Key={{STORAGE_KEY}}
-ASPNETCORE_Storage__Url=DefaultEndpointsProtocol=https;AccountName={0};AccountKey={1};EndpointSuffix={2}
-ASPNETCORE_Landing__url={{LANDING_URL}}
-ASPNETCORE_Portal__url={{APP_URL}}
-ASPNETCORE_Scoring__ranks__rookie=250
-ASPNETCORE_Scoring__points__None=0
-ASPNETCORE_Scoring__points__BugBounty=100
-ASPNETCORE_Scoring__points__Sponsoring=200
-ASPNETCORE_Scoring__points__PurchaseOrder=500
-ASPNETCORE_Scoring__points__RateProduct=300
-ASPNETCORE_IpRateLimiting__EnableEndpointRateLimiting=true
-ASPNETCORE_IpRateLimiting__StackBlockedRequests=false
-ASPNETCORE_IpRateLimiting__RealIpHeader=X-Real-IP
-ASPNETCORE_IpRateLimiting__ClientIdHeader=X-ClientId
-ASPNETCORE_IpRateLimiting__HttpStatusCode=200
-ASPNETCORE_IpRateLimiting__GeneralRules__0__Endpoint=post:/graphql
-ASPNETCORE_IpRateLimiting__GeneralRules__0__Period=1m
-ASPNETCORE_IpRateLimiting__GeneralRules__0__Limit=60
-ASPNETCORE_IpRateLimiting__GeneralRules__1__Endpoint=post:/upload/*
-ASPNETCORE_IpRateLimiting__GeneralRules__1__Period=1m
-ASPNETCORE_IpRateLimiting__GeneralRules__1__Limit=1
-ASPNETCORE_IpRateLimiting__QuotaExceededResponseContent={{\"errors\": [{{\"message\": \"Quota de demandes atteint, veuillez patientez quelques instants\",\"extensions\": {{\"code\": \"TooManyRequest\",\"TooManyRequest\":\"Plus de {0} demandes de votre part en 60 secondes. Veuillez patienter quelques instants.\"}}}}]}}
-ASPNETCORE_IpRateLimiting__QuotaExceededResponseContentType=application/json
-ASPNETCORE_IpRateLimiting__QuotaExceededResponseStatusCode=200
-ASPNETCORE_Roles__Admin__id={{ROLES_ADMIN_ID}}
-ASPNETCORE_Roles__Admin__value={{ROLES_ADMIN_VALUE}}
-ASPNETCORE_Roles__Owner__id={{ROLES_OWNER_ID}}
-ASPNETCORE_Roles__Owner__value={{ROLES_OWNER_VALUE}}
-ASPNETCORE_Roles__User__id={{ROLES_USER_ID}}
-ASPNETCORE_Roles__User__value={{ROLES_USER_VALUE}}
-ASPNETCORE_Roles__Store__id={{ROLES_STORE_ID}}
-ASPNETCORE_Roles__Store__value={{ROLES_STORE_VALUE}}
-ASPNETCORE_Roles__Producer__id={{ROLES_PRODUCER_ID}}
-ASPNETCORE_Roles__Producer__value={{ROLES_STORE_VALUE}}
-ASPNETCORE_Roles__Consumer__id={{ROLES_CONSUMER_ID}}
-ASPNETCORE_Roles__Consumer__value={{ROLES_CONSUMER_VALUE}}
-ASPNETCORE_Roles__Support__id={{ROLES_SUPPORT_ID}}
-ASPNETCORE_Roles__Support__value={{ROLES_SUPPORT_VALUE}}
-ASPNETCORE_Roles__Anonymous__id={{ROLES_ANONYMOUS_ID}}
-ASPNETCORE_Roles__Anonymous__value={{ROLES_ANONYMOUS_VALUE}}
-ASPNETCORE_Roles__AppUser__id={{ROLES_APPUSER_ID}}
-ASPNETCORE_Roles__AppUser__value={{ROLES_APPUSER_VALUE}}
-ASPNETCORE_Users__admin__id={{USERS_ADMIN_ID}}
-ASPNETCORE_Users__admin__email={{USERS_ADMIN_EMAIL}}
-ASPNETCORE_Users__admin__password={{USERS_ADMIN_PASSWORD}}
-ASPNETCORE_Users__admin__firstname={{USERS_ADMIN_FIRSTNAME}}
-ASPNETCORE_Users__admin__lastname={{USERS_ADMIN_LASTNAME}}
-ASPNETCORE_Users__support__id={{USERS_SUPPORT_ID}}
-ASPNETCORE_Users__support__email={{USERS_SUPPORT_EMAIL}}
-ASPNETCORE_Users__support__password={{USERS_SUPPORT_PASSWORD}}
-ASPNETCORE_Users__support__firstname={{USERS_SUPPORT_FIRSTNAME}}
-ASPNETCORE_Users__support__lastname={{USERS_SUPPORT_LASTNAME}}
+Serilog__MinimumLevel__Default=Warning
+Serilog__MinimumLevel__Override__Microsoft=Warning
+Serilog__MinimumLevel__Override__Sheaft=Information
+NEW_RELIC_LOG_API={{NEW_RELIC_API}}
+NEW_RELIC_LICENCE_KEY={{NEW_RELIC_LICENCE_KEY}}
+NEW_RELIC_INSERT_KEY={{NEW_RELIC_INSERT_KEY}}
+NEW_RELIC_BATCH_SIZE=250
+NEW_RELIC_LOG_LEVEL=Warning
+mailer__apiId={{MAILER_ID}
+mailer__apiKey={{MAILER_KEY}}
+mailer__sender__email={{MAILER_EMAIL}}
+mailer__sender__name={{MAILER_NAME}}
+mailer__bounces={{MAILER_BOUNCES}}
+Psp__ApiUrl=https://api.sandbox.mangopay.com
+Psp__ClientId={{PSP_ID}}
+Psp__ApiKey={{PSP_KEY}}
+Psp__ReturnUrl=http://localhost:5014/payments/transaction
+Psp__PaymentUrl=http://localhost:5014
+Psp__PaylineUrl=https://homologation-payment.cdn.payline.com
+Psp__AppRedirectUrl=http://localhost:4200/#/cart/checkout?transactionId={transactionId}
+Psp__AppRedirectSuccessUrl=http://localhost:4200/#/cart/success?transactionId={transactionId}
+Psp__AppRedirectPendingUrl=http://localhost:4200/#/cart/pending?transactionId={transactionId}
+Psp__AppRedirectFailedUrl=http://localhost:4200/#/cart/checkout?transactionId={transactionId}&message={message}
+Psp__FixedAmount=0.18
+Psp__Percent=0.018
+Psp__UserId={{PSP_USER_ID}}
+Psp__WalletId={{PSP_WALLET_ID}}
+Psp__SkipIdempotencyKey=false
+Psp__Bank__Id={{PSP_BANK_ID}}
+Psp__Bank__Iban={{PSP_BANK_IBAN}}
+Psp__Bank__Bic={{PSP_BANK_BIC}}
+Psp__Bank__Address__Line1={{PSP_BANK_LINE1}}
+Psp__Bank__Address__Line2={{PSP_BANK_LINE2}}
+Psp__Bank__Address__Zipcode={{PSP_BANK_ZIPCODE}}
+Psp__Bank__Address__City={{PSP_BANK_CITY}}
+Psp__Bank__Address__Country={{PSP_BANK_COUNTRY_ISO_CODE}}
+Search__name={{SEARCH_NAME}}
+Search__apiKey={{SEARCH_KEY}}
+Search__indexes__products=products
+Search__indexes__producers=producers
+Search__indexes__stores=stores
+Sirene__scheme=Bearer
+Sirene__url=https://api.insee.fr/
+Sirene__apiKey={{SIRENE_KEY}}
+Sirene__searchSiretUrl=/entreprises/sirene/V3/siret/{0}?champs=siren%2Cnic%2Csiret%2CprenomUsuelUniteLegale%2CnomUniteLegale%2CdenominationUsuelle1UniteLegale%2CnumeroVoieEtablissement%2CcomplementAdresseEtablissement%2ClibelleVoieEtablissement%2CcodePostalEtablissement%2ClibelleCommuneEtablissement%2CcategorieJuridiqueUniteLegale%2CetatAdministratifUniteLegale%2CtypeVoieEtablissement&masquerValeursNulles=true
+Auth__scheme=apikey
+Auth__url=http://identity:5000
+Auth__apiKey={{AUTH_KEY}}
+Auth__actions__profile=/account/profile
+Auth__actions__picture=/account/picture
+Auth__actions__delete=/account/userAccount?userId={0}
+Auth__caching=true
+Auth__cacheDurationInSeconds=300
+Auth__app__id={{AUTH_APP_ID}}
+Auth__app__audience=App
+Auth__app__secret={{AUTH_APP_KEY}}
+Auth__manage__id={{AUTH_MANAGE_ID}}
+Auth__manage__audience=Manage
+Auth__manage__secret={{AUTH_MANAGE_KEY}}
+Auth__jobs__id={{AUTH_JOB_ID}}
+Auth__jobs__audience=Jobs
+Auth__jobs__secret={{AUTH_JOB_KEY}}
+SignalR__scheme=apikey
+SignalR__apiKey={{SIGNALR_KEY}}
+SignalR__url=http://signalr:5009
+SignalR__notifyGroupUrl=/api/notify/notify-group/{0}/{1}
+SignalR__notifyUserUrl=/api/notify/notify-user/{0}/{1}
+Freshdesk__apiKey={{FRESHDESK_KEY}}
+Freshdesk__url={{FRESHDESK_URL}}
+AppDatabase__Name=app
+AppDatabase__Server=host.docker.internal
+AppDatabase__User=sa
+AppDatabase__Password={{SQL_PASSWORD}}
+AppDatabase__Port=1434
+AppDatabase__Url=Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};
+JobsDatabase__Name=app
+JobsDatabase__Server=host.docker.internal
+JobsDatabase__User=sa
+JobsDatabase__Password={{SQL_PASSWORD}}
+JobsDatabase__Port=1434
+JobsDatabase__Url=Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};
+IdentityDatabase__Name=app
+IdentityDatabase__Server=host.docker.internal
+IdentityDatabase__User=sa
+IdentityDatabase__Password={{SQL_PASSWORD}}
+IdentityDatabase__Port=1434
+IdentityDatabase__Url=Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};
+Cache__TableName=CachedItems
+Cache__SchemaName=Cache
+Cache__CacheExpirationInMinutes=30
+Cors__origins__0=http://localhost:4200
+Cors__origins__1=http://signalr:5009
+Cors__methods__0=POST
+Cors__methods__1=GET
+Cors__methods__2=PUT
+Cors__methods__3=DELETE
+Cors__methods__4=PATCH
+Cors__headers__0=*
+Storage__Containers__Pictures=pictures
+Storage__Containers__Products=products
+Storage__Containers__Jobs=jobs
+Storage__Containers__Rgpd=rgpd
+Storage__Containers__PickingOrders=picking-orders
+Storage__Containers__Progress=progress
+Storage__Tables__PurchaseOrdersReferences=purchaseordersreferences
+Storage__Tables__OrdersReferences=ordersreferences
+Storage__Tables__ProductsReferences=productsreferences
+Storage__Tables__SponsoringCodes=sponsoringcodes
+Storage__Suffix=core.windows.net
+Storage__Account={{STORAGE_ACCOUNT}}
+Storage__Key={{STORAGE_KEY}}
+Storage__Url=DefaultEndpointsProtocol=https;AccountName={0};AccountKey={1};EndpointSuffix={2}
+Landing__url=http://localhost:3000
+Portal__url=http://localhost:4200
+Scoring__ranks__rookie=250
+Scoring__points__None=0
+Scoring__points__BugBounty=100
+Scoring__points__Sponsoring=200
+Scoring__points__PurchaseOrder=500
+Scoring__points__RateProduct=300
+IpRateLimiting__EnableEndpointRateLimiting=true
+IpRateLimiting__StackBlockedRequests=false
+IpRateLimiting__RealIpHeader=X-Real-IP
+IpRateLimiting__ClientIdHeader=X-ClientId
+IpRateLimiting__HttpStatusCode=200
+IpRateLimiting__GeneralRules__0__Endpoint=post:/graphql
+IpRateLimiting__GeneralRules__0__Period=1m
+IpRateLimiting__GeneralRules__0__Limit=60
+IpRateLimiting__GeneralRules__1__Endpoint=post:/upload/*
+IpRateLimiting__GeneralRules__1__Period=1m
+IpRateLimiting__GeneralRules__1__Limit=1
+IpRateLimiting__QuotaExceededResponseContent={{\"errors\": [{{\"message\": \"Quota de demandes atteint, veuillez patientez quelques instants\",\"extensions\": {{\"code\": \"TooManyRequest\",\"TooManyRequest\":\"Plus de {0} demandes de votre part en 60 secondes. Veuillez patienter quelques instants.\"}}}}]}}
+IpRateLimiting__QuotaExceededResponseContentType=application/json
+IpRateLimiting__QuotaExceededResponseStatusCode=200
+Roles__Admin__id={{ROLES_ADMIN_ID}}
+Roles__Admin__value={{ROLES_ADMIN_VALUE}}
+Roles__Owner__id={{ROLES_OWNER_ID}}
+Roles__Owner__value={{ROLES_OWNER_VALUE}}
+Roles__User__id={{ROLES_USER_ID}}
+Roles__User__value={{ROLES_USER_VALUE}}
+Roles__Store__id={{ROLES_STORE_ID}}
+Roles__Store__value={{ROLES_STORE_VALUE}}
+Roles__Producer__id={{ROLES_PRODUCER_ID}}
+Roles__Producer__value={{ROLES_STORE_VALUE}}
+Roles__Consumer__id={{ROLES_CONSUMER_ID}}
+Roles__Consumer__value={{ROLES_CONSUMER_VALUE}}
+Roles__Support__id={{ROLES_SUPPORT_ID}}
+Roles__Support__value={{ROLES_SUPPORT_VALUE}}
+Roles__Anonymous__id={{ROLES_ANONYMOUS_ID}}
+Roles__Anonymous__value={{ROLES_ANONYMOUS_VALUE}}
+Roles__AppUser__id={{ROLES_APPUSER_ID}}
+Roles__AppUser__value={{ROLES_APPUSER_VALUE}}
+Users__admin__id={{USERS_ADMIN_ID}}
+Users__admin__email={{USERS_ADMIN_EMAIL}}
+Users__admin__password={{USERS_ADMIN_PASSWORD}}
+Users__admin__firstname={{USERS_ADMIN_FIRSTNAME}}
+Users__admin__lastname={{USERS_ADMIN_LASTNAME}}
+Users__support__id={{USERS_SUPPORT_ID}}
+Users__support__email={{USERS_SUPPORT_EMAIL}}
+Users__support__password={{USERS_SUPPORT_PASSWORD}}
+Users__support__firstname={{USERS_SUPPORT_FIRSTNAME}}
+Users__support__lastname={{USERS_SUPPORT_LASTNAME}}
