New - Ajout de données par défaut

--- a/Docker/docker.env
+++ b/Docker/docker.env
@@ -53,13 +53,13 @@ Auth__actions__picture=/account/picture
 Auth__actions__delete=/account/userAccount?userId={0}
 Auth__caching=true
 Auth__cacheDurationInSeconds=300
-Auth__app__id={{AUTH_APP_ID}}
+Auth__app__id=97e3f4c0-62fa-4ee3-bad8-c23f7b0033b7
 Auth__app__audience=App
 Auth__app__secret={{AUTH_APP_KEY}}
-Auth__manage__id={{AUTH_MANAGE_ID}}
+Auth__manage__id=d48a8aa3-19cc-4133-ac6e-fcb544630a54
 Auth__manage__audience=Manage
 Auth__manage__secret={{AUTH_MANAGE_KEY}}
-Auth__jobs__id={{AUTH_JOB_ID}}
+Auth__jobs__id=2f709f9e-235c-4224-93cc-8ecf3e780c4e
 Auth__jobs__audience=Jobs
 Auth__jobs__secret={{AUTH_JOB_KEY}}
 SignalR__scheme=apikey
@@ -135,23 +135,23 @@ IpRateLimiting__QuotaExceededResponseContent={{\"errors\": [{{\"message\": \"Quo
 IpRateLimiting__QuotaExceededResponseContentType=application/json
 IpRateLimiting__QuotaExceededResponseStatusCode=200
 Roles__Admin__id={{ROLES_ADMIN_ID}}
-Roles__Admin__value={{ROLES_ADMIN_VALUE}}
+Roles__Admin__value=ADMIN
 Roles__Owner__id={{ROLES_OWNER_ID}}
-Roles__Owner__value={{ROLES_OWNER_VALUE}}
+Roles__Owner__value=OWNER
 Roles__User__id={{ROLES_USER_ID}}
-Roles__User__value={{ROLES_USER_VALUE}}
+Roles__User__value=USER
 Roles__Store__id={{ROLES_STORE_ID}}
-Roles__Store__value={{ROLES_STORE_VALUE}}
+Roles__Store__value=STORE
 Roles__Producer__id={{ROLES_PRODUCER_ID}}
-Roles__Producer__value={{ROLES_STORE_VALUE}}
+Roles__Producer__value=PRODUCER
 Roles__Consumer__id={{ROLES_CONSUMER_ID}}
-Roles__Consumer__value={{ROLES_CONSUMER_VALUE}}
+Roles__Consumer__value=CONSUMER
 Roles__Support__id={{ROLES_SUPPORT_ID}}
-Roles__Support__value={{ROLES_SUPPORT_VALUE}}
+Roles__Support__value=SUPPORT
 Roles__Anonymous__id={{ROLES_ANONYMOUS_ID}}
-Roles__Anonymous__value={{ROLES_ANONYMOUS_VALUE}}
+Roles__Anonymous__value=ANONYMOUS
 Roles__AppUser__id={{ROLES_APPUSER_ID}}
-Roles__AppUser__value={{ROLES_APPUSER_VALUE}}
+Roles__AppUser__value=APPUSER
 Users__admin__id={{USERS_ADMIN_ID}}
 Users__admin__email={{USERS_ADMIN_EMAIL}}
 Users__admin__password={{USERS_ADMIN_PASSWORD}}
