--- a/Sheaft.Web.Api/Sheaft.Web.Api.csproj
+++ b/Sheaft.Web.Api/Sheaft.Web.Api.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="3.1.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.10" />
     <PackageReference Include="Microsoft.Spatial" Version="7.7.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="NewRelic.Agent" Version="8.35.0" />
     <PackageReference Include="NewRelic.Agent.Api" Version="8.35.0" />
