--- a/Sheaft.Web.Signalr/Sheaft.Web.Signalr.csproj
+++ b/Sheaft.Web.Signalr/Sheaft.Web.Signalr.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>17d2c655-e4c0-4c4d-a2bf-e8a02a225438</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
   <ItemGroup>
     <Content Remove="appsettings.Development.json" />
@@ -15,6 +17,7 @@
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.17" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.7.17" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="NewRelic.Agent" Version="8.35.0" />
     <PackageReference Include="NewRelic.Agent.Api" Version="8.35.0" />
