--- a/azure-pipelines-docker-graphql.yml
+++ b/azure-pipelines-docker-graphql.yml
@@ -16,23 +16,13 @@ stages:
   - job: Build
     displayName: Build and push Docker image
     steps:
-    - task: Docker@1
-      displayName: 'Build the Docker image'
+    - task: Docker@2
       inputs:
-        containerregistrytype: 'Container Registry'
-        dockerRegistryEndpoint: 'Docker Hub'
-        command: 'Build an image'
-        dockerFile: '**/Dockerfile'
-        imageName: '$(ImageName)'
-        includeLatestTag: true
-        useDefaultContext: false
+        containerRegistry: 'Docker Hub'
+        repository: 'sheaft/sheaft.graphql'
+        command: 'buildAndPush'
+        Dockerfile: '**/Sheaft.Web.Api/Dockerfile'
         buildContext: '.'
-     
-    - task: Docker@1
-      displayName: 'Push the Docker image to Dockerhub'
-      inputs:
-        containerregistrytype: 'Container Registry'
-        dockerRegistryEndpoint: 'Docker Hub'
-        command: 'Push an image'
-        imageName: '$(ImageName)'
-      condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+        tags: |
+          dev-$(Build.SourceVersion)
+          latest
